--- a/app/src/main/res/layout/facts_fragment.xml
+++ b/app/src/main/res/layout/facts_fragment.xml
@@ -44,10 +44,11 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
+       android:layout_marginTop="20dp"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toBottomOf="@+id/fact_name" />
+       app:layout_constraintTop_toBottomOf="@+id/fact_body" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
