--- a/app/src/main/res/layout/fragment_catholic_quiz.xml
+++ b/app/src/main/res/layout/fragment_catholic_quiz.xml
@@ -8,54 +8,47 @@
     android:padding="8dp"
     tools:context=".ui.quiz.CatholicQuizFragment">
 
-    <Button
-        android:id="@+id/bible"
-        android:layout_width="0dp"
+
+    <TextView
+        android:id="@+id/choose"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="13dp"
-        android:layout_marginTop="312dp"
-        android:background="@color/colorWhite"
-        android:padding="13dp"
-        android:textStyle="bold"
-        android:text="@string/quiz_bible"
-        android:textColor="@color/colorBlack"
-        android:textSize="30sp"
+        android:layout_marginTop="48dp"
+        android:text="Choose number of questions"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.121"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/radio_group"/>
 
     <Button
-        android:id="@+id/catholicQuiz"
-        android:layout_width="370dp"
+        android:id="@+id/start_quiz"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@color/colorWhite"
-        android:padding="13dp"
-        android:textStyle="bold"
-        android:text="@string/quiz_cathechesis"
-        android:textColor="@color/colorBlack"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/button_corners"
+        android:text="@string/start_quiz"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.609"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bible" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_number_of_questions" />
 
-    <Button
-        android:id="@+id/advanced"
-        android:layout_width="370dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@color/colorWhite"
-        android:padding="13dp"
-        android:textStyle="bold"
-        android:text="@string/quiz_facts"
-        android:textColor="@color/colorBlack"
-        android:textSize="30sp"
+    <Spinner
+        android:id="@+id/spinner_number_of_questions"
+        style="@style/Widget.AppCompat.Spinner"
+        android:layout_width="80dp"
+        android:layout_height="?attr/dropdownListPreferredItemHeight"
+        android:layout_margin="10dp"
+        android:layout_marginTop="368dp"
+        android:background="@drawable/style_spinner"
+        android:dropDownWidth="80dp"
+        android:entries="@array/spinner_entries"
+        android:popupElevation="3dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/catholicQuiz" />
+        app:layout_constraintTop_toBottomOf="@+id/choose" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
@@ -66,5 +59,49 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <RadioGroup
+        android:id="@+id/radio_group"
+        android:layout_width="187dp"
+        android:layout_height="157dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <RadioButton
+            android:id="@+id/advanced_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:text="@string/quiz_facts"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/catholic_faith_button"
+            app:layout_constraintTop_toBottomOf="@+id/catholic_faith_button" />
+
+        <RadioButton
+            android:id="@+id/bible_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/quiz_bible"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <RadioButton
+            android:id="@+id/catholic_faith_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/quiz_cathechesis"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/bible_button"
+            app:layout_constraintTop_toBottomOf="@+id/bible_button" />
+
+    </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
