--- a/app/src/main/res/layout/prayer_single_item.xml
+++ b/app/src/main/res/layout/prayer_single_item.xml
@@ -3,12 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="60sp">
 
     <TextView
         android:id="@+id/text_prayer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="39dp"
+        android:layout_marginEnd="64dp"
+        android:autoSizeTextType="uniform"
+        android:autoSizeMinTextSize="15sp"
+        android:autoSizeMaxTextSize="20sp"
         android:clickable="true"
         android:focusable="true"
         android:fontFamily="@font/bubblegum_sans"
@@ -16,12 +20,16 @@
         android:padding="8dp"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
-        android:textSize="17sp"
+        android:textSize="20sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="textds" />
+        app:layout_constraintVertical_bias="0.523"
+        tools:text="textikjili"
+        tools:targetApi="o" />
 
     <ImageView
         android:id="@+id/fav_image"
@@ -30,8 +38,6 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/text_prayer"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
