My fifth commit. In this place i changes my prayers, facts, oom to offline and reformated some code to make the app very better. Its faster than before

--- a/app/src/main/res/layout/o_o_m_fragment.xml
+++ b/app/src/main/res/layout/o_o_m_fragment.xml
@@ -16,12 +16,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:textSize="20sp"
+            android:textColor="@color/colorBlack"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Hello" />
 
         <TextView
+            android:textColor="@color/colorBlack"
             android:id="@+id/oom_body"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
