--- a/app/src/main/res/drawable/style_spinner.xml
+++ b/app/src/main/res/drawable/style_spinner.xml
@@ -8,7 +8,9 @@
                 <inset android:insetLeft="-1dp"
                     android:insetRight="-1dp">
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/colorPrimaryDark"/>
+                    <solid android:color="@color/colorPrimary"/>
+                    <stroke android:color="@color/colorPrimaryDark"
+                        android:width="3dp"/>
                     <corners android:radius="10dp"/>
                     <padding android:right="10dp"/>
                 </shape>
