--- a/app/src/main/res/layout-sw600dp/fragment_main_screen.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_main_screen.xml
@@ -34,4 +34,11 @@
             android:layout_height="match_parent"
             android:id="@+id/recycler_view"/>
 
-    </RelativeLayout>
+    <include
+        layout="@layout/adview"
+        android:id="@+id/adView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"/>
+
+
+</RelativeLayout>
