--- a/app/src/main/res/layout-sw600dp/o_o_m_fragment.xml
+++ b/app/src/main/res/layout-sw600dp/o_o_m_fragment.xml
@@ -35,6 +35,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/oom_title"
             tools:text="Hellosdmlnsjkk sk snkd ksdlk ksnldks kslks klsks klss lsks lksns lskn sls" />
-
+        <include
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            layout="@layout/adview"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
