--- a/app/src/main/res/layout/favorite_facts_fragment.xml
+++ b/app/src/main/res/layout/favorite_facts_fragment.xml
@@ -18,4 +18,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <include
+        layout="@layout/adview"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
