--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -21,4 +21,11 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/main_screen_single_item_layout" />
 
+    <include
+        layout="@layout/adview"
+        android:id="@+id/adView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
