--- a/app/src/main/res/layout/fragment_order_of_mass.xml
+++ b/app/src/main/res/layout/fragment_order_of_mass.xml
@@ -61,5 +61,10 @@
       android:textSize="20sp"
       android:textColor="@color/colorBlack"
       android:background="@drawable/rounded_corners"/>
+  <include
+      layout="@layout/adview"
+      android:id="@+id/adView"
+      android:layout_width="0dp"
+      android:layout_height="0dp"/>
 
 </LinearLayout>
