--- a/app/src/main/res/layout/fragment_catholic_quiz.xml
+++ b/app/src/main/res/layout/fragment_catholic_quiz.xml
@@ -114,4 +114,14 @@
             app:layout_constraintTop_toBottomOf="@+id/bible_button" />
     </RadioGroup>
 
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        android:layout_marginTop="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/start_quiz" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
