I removed some unused code and biloplate code in the project. I also implemented more architectural patterns in the app to reduce memory usage.

--- a/app/src/main/res/layout/fragment_prayer.xml
+++ b/app/src/main/res/layout/fragment_prayer.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/toolbar_gradient"
     android:padding="5dp"
     android:layout_height="match_parent"
     tools:context=".ui.prayer.PrayerFragment">
@@ -13,6 +14,7 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@drawable/toolbar_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
