--- a/app/src/main/res/drawable/corners.xml
+++ b/app/src/main/res/drawable/corners.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-<solid android:color="#F2F3F8"/>
-    <corners android:radius="6dp"/>
-<stroke android:color="#07FAFAFB"
-    android:width="2dp"/>
+<corners android:color="@color/colorWhite"
+    android:radius="5dp"/>
 </shape>
