--- a/app/src/main/res/drawable/toolbar_gradient.xml
+++ b/app/src/main/res/drawable/toolbar_gradient.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+
     <gradient
         android:angle="270"
-        android:endColor="@color/colorPrimary"
-        android:startColor="@color/colorPrimaryDark"
+        android:startColor="#559CF1"
+        android:centerColor="#5680EC"
+        android:endColor="#3C26E1"
         android:type="linear"/>
 
 </shape>
