--- a/app/src/main/res/layout/fragment_catholic_quiz.xml
+++ b/app/src/main/res/layout/fragment_catholic_quiz.xml
@@ -39,21 +39,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+    <com.sanojpunchihewa.glowbutton.GlowButton
         android:id="@+id/start_quiz"
-        android:layout_width="190dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="68dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/button_corners"
-        android:text="@string/start_quiz"
+        android:layout_marginEnd="32dp"
         android:fontFamily="@font/bubblegum_sans"
-        android:textSize="25sp"
+        android:padding="12dp"
+        android:text="@string/start_quiz"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="40sp"
+        android:textStyle="bold|normal"
+        app:buttonColor="@color/colorWhite"
+        app:cornerRadius="7dp"
+        app:glowColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_number_of_questions" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_number_of_questions"
+        app:pressedGlowSize="28sp" />
 
     <Spinner
         android:id="@+id/spinner_number_of_questions"
