--- a/app/src/main/res/layout/fragment_quiz_result.xml
+++ b/app/src/main/res/layout/fragment_quiz_result.xml
@@ -21,7 +21,7 @@
             android:fontFamily="@font/bubblegum_sans"
             android:textSize="19sp"
             android:textStyle="bold"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorGrey"
             app:layout_constraintBottom_toTopOf="@+id/progress"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -82,31 +82,26 @@
             app:layout_constraintTop_toTopOf="@+id/progress"
             tools:text="80%" />
 
-
-        <View
-            android:id="@+id/watch_video_anim"
+        <com.sanojpunchihewa.glowbutton.GlowButton
+            android:id="@+id/watch_video_text"
             android:layout_width="320dp"
-            android:layout_height="65dp"
+            android:layout_height="90dp"
             android:layout_marginTop="84dp"
+            app:unpressedGlowSize="19sp"
+            app:pressedGlowSize="23sp"
             android:background="@color/colorPrimaryDark"
+            app:cornerRadius="7dp"
+            app:glowColor="@color/colorWhite"
+            app:buttonColor="@color/colorPrimaryDark"
+            android:fontFamily="@font/bubblegum_sans"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.494"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/wrong_ones" />
-
-        <TextView
-            android:id="@+id/watch_video_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/bubblegum_sans"
-            android:padding="6dp"
+            app:layout_constraintTop_toBottomOf="@+id/wrong_ones"
+            android:padding="12dp"
             android:text="WATCH AD TO EARN POINTS"
             android:textColor="@color/colorWhite"
             android:textSize="19sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/watch_video_anim"
-            app:layout_constraintEnd_toEndOf="@+id/watch_video_anim"
-            app:layout_constraintStart_toStartOf="@+id/watch_video_anim"
-            app:layout_constraintTop_toTopOf="@+id/watch_video_anim" />
+            android:textStyle="bold"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
