--- a/app/src/main/res/layout/prayer_header.xml
+++ b/app/src/main/res/layout/prayer_header.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,11 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        android:textSize="20sp"
-        android:textColor="@color/colorRed"
+        android:textSize="15sp"
+        android:textColor="@color/colorWhite"
+        android:gravity="center"
         android:textStyle="bold"
-        android:padding="15dp"
-        android:background="@drawable/header_gradient"
+        android:padding="12dp"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="textdshksbdjsdj" />
 </androidx.constraintlayout.widget.ConstraintLayout>
