--- a/app/src/main/res/layout-sw600dp/main_screen_single_item_layout.xml
+++ b/app/src/main/res/layout-sw600dp/main_screen_single_item_layout.xml
@@ -1,73 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="250dp"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingLeft="16dp"
-    android:paddingBottom="16dp"
-    android:layout_centerHorizontal="true"
-    android:layout_marginBottom="20dp"
-    android:paddingRight="16dp"
-    app:cardCornerRadius="8dp">
+    android:focusable="true"
+    android:clickable="true"
+    android:layout_margin="5dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardCornerRadius="7dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
             android:id="@+id/image_view"
-            android:adjustViewBounds="true"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="0dp"
-            tools:src="@mipmap/ic_launcher"/>
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="Know your faith"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@mipmap/ic_launcher" />
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_below="@id/image_view"
-            android:background="@drawable/for_view"/>
+            android:id="@+id/view"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/image_view"
+            app:layout_constraintStart_toStartOf="@+id/image_view"
+            app:layout_constraintTop_toBottomOf="@+id/image_view"/>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/title"
-            android:layout_below="@+id/image_view"
-            tools:text= "Title"
-            android:layout_marginTop="8dp"
-            android:textStyle="bold"
-            android:textSize="24sp"
-            android:textColor="@color/colorBlack"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/bubblegum_sans"
             android:letterSpacing="0.1"
             android:shadowColor="#7C7F85"
             android:shadowDx="1.5"
             android:shadowDy="1.3"
             android:shadowRadius="1.6"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/title_description"
-            android:layout_below="@+id/title"
-            tools:text= "Description"
-            android:layout_marginTop="8dp"
+            android:textColor="@color/colorBlue"
+            android:textSize="40sp"
             android:textStyle="bold"
-            android:ellipsize="end"
-            android:textColor="@color/colorWhite"
-            android:textSize="16sp"
-            android:fontFamily="@font/bubblegum_sans"
-            android:letterSpacing="0.1"
-            android:shadowColor="#FF085A"
-            android:shadowDx="1.5"
-            android:shadowDy="1.3"
-            android:shadowRadius="1.6"
-            />
-
-    </RelativeLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/image_view"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/image_view"
+            app:layout_constraintTop_toTopOf="@+id/view"
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="Title" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
