--- a/app/src/main/res/layout/fragment_quiz_custom.xml
+++ b/app/src/main/res/layout/fragment_quiz_custom.xml
@@ -83,7 +83,7 @@
         android:background="@drawable/quiz_options"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorWhite"
         android:textSize="18sp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="@+id/option2"
@@ -102,7 +102,7 @@
         android:background="@drawable/quiz_options"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorWhite"
         android:textSize="18sp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="@+id/option3"
@@ -121,7 +121,7 @@
         android:background="@drawable/quiz_options"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorWhite"
         android:textSize="18sp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="@+id/question"
